// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateRoutes() - Layout Features > should handle nested layouts correctly 1`] = `
"// ATTENTION: This file is automatically generated by react-router-file.
// Do not edit manually.
import { lazy, Suspense } from 'react';
import { Routes, Route, Outlet } from 'react-router-dom';

const Page0 = lazy(() => import('./pages/layout.tsx'));
const Page1 = lazy(() => import('./pages/dashboard/layout.tsx'));
const Page2 = lazy(() => import('./pages/dashboard/index.tsx'));
const Page3 = lazy(() => import('./pages/dashboard/settings.tsx'));

const LoadingComponent = () => null;

export const AppRoutes = () => (
  <Suspense fallback={<LoadingComponent />}>
    <Routes>
      <Route path="/" element={<Page0 />}>
            <Route path="dashboard" element={<Page1 />}>
            <Route index element={<Page2 />} />
            <Route path="settings" element={<Page3 />} />
        </Route>
        </Route>
    </Routes>
  </Suspense>
);"
`;

exports[`generateRoutes() - Layout Features > should handle pages alongside a directory with a layout 1`] = `
"// ATTENTION: This file is automatically generated by react-router-file.
// Do not edit manually.
import { lazy, Suspense } from 'react';
import { Routes, Route, Outlet } from 'react-router-dom';

const Page0 = lazy(() => import('./pages/admin/layout.tsx'));
const Page1 = lazy(() => import('./pages/admin/index.tsx'));
const Page2 = lazy(() => import('./pages/admin/users.tsx'));
const Page3 = lazy(() => import('./pages/index.tsx'));

const LoadingComponent = () => null;

export const AppRoutes = () => (
  <Suspense fallback={<LoadingComponent />}>
    <Routes>
      <Route index element={<Page3 />} />
      <Route path="admin" element={<Page0 />}>
            <Route index element={<Page1 />} />
            <Route path="users" element={<Page2 />} />
        </Route>
    </Routes>
  </Suspense>
);"
`;
